# kissml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml  pr-checks.yml  publish-pypi.yml  publish.yml  release.yml
kissml/: __init__.py  core.py  disk.py  serializers.py  settings.py  step.py  types.py
tests/: test_after_effects.py  test_pandas.py  test_step.py
