[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kissml"
version = "0.4.2"
description = "Keep It Simple Stupid Tools for Machine Learning"
authors = [{ name="Lou Kratz", email="kissml@lou.dev" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
]
license = "CC-BY-NC-ND-4.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lou-k/kissml"

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "ipython>=8.37.0",
    "isort>=7.0.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pkginfo>=1.12.1.2",
    "pre-commit>=3.6.0",
    "pyarrow>=22.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["kissml"]

# Tool configurations
[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["kissml", "tests"]

[tool.coverage.run]
source = ["kissml"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access",
]

[tool.ty.environment]
python-version = "3.12"
